[package]
name = "my_lints"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
dylint_linting = "*"
clippy_utils = { git = "https://github.com/rust-lang/rust-clippy", rev = "586a99348c6a6f5309e82b340193067b7d76e37c"}

[dev-dependencies]
dylint_testing = "*"

[package.metadata.rust-analyzer]
rustc_private = true
excludeDirs = "ui"