# dylint demo
[package]
name = "my_lints"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
dylint_linting = "0.1"
clippy_utils = { git = "https://github.com/rust-lang/rust-clippy", rev = "ae72f1adb9cbf16141f880e9e955723a5fdabf00"}

[dev-dependencies]
dylint_testing = "0.1"

[package.metadata.rust-analyzer]
rustc_private = true
